Minor title fixs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HyperWizYt2's Personal GitHub Website</title>
+        <title>HyperWizYT1's Personal GitHub Website</title>
         
         <!-- Website metadata -->
         <meta charset="utf-8">
